<resources>
    <string name="app_name">Crypto Challenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_display">%1$.2f %2$s</string>
    <string name="min_currency_display">min: %1$d %2$s</string>
    <string name="max_currency_display">max: %1$d %2$s</string>
    <string name="amount_sc">Amount:</string>
    <string name="price_sc">Price:</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="book">Book</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="volume">volume</string>
    <string name="ask">Ask</string>
    <string name="bids">Bids</string>
    <string name="cryptoImageDetails">This is the log of the Crypto Currency</string>
    <string name="value">Value</string>
</resources>