<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.DetailsFragment">


    <ImageView
        android:id="@+id/cryptoDetail_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/cryptoImageDetails"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/highTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cryptoDetail_imageView"
        app:layout_constraintTop_toTopOf="@+id/cryptoDetail_imageView"
        tools:text="@string/high" />

    <TextView
        android:id="@+id/high_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ask_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/highTitle"
        app:layout_constraintTop_toTopOf="@+id/highTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:text="1009.00" />

    <TextView
        android:id="@+id/lowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/low"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highTitle" />

    <TextView
        android:id="@+id/low_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ask_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/highTitle"
        app:layout_constraintTop_toTopOf="@+id/lowTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:text="1009.00" />


    <TextView
        android:id="@+id/volumeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ask_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cryptoDetail_imageView"
        app:layout_constraintVertical_bias="0.227" />

    <TextView
        android:id="@+id/volume_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1000.00"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ask_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/volumeTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/askTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ask_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volumeTitle"
        app:layout_constraintVertical_bias="0.835" />

    <TextView
        android:id="@+id/bidsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bids"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bids_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volumeTitle"
        app:layout_constraintVertical_bias="0.829" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ask_recyclerView"
        android:layout_width="200dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bids_recyclerView"
        android:layout_width="200dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ask_recyclerView"

        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>